feat: follow JBang for the directives and mirror its parser
The //-directives now behave as in JBang. The parser itself is taken from
upstream unchanged (Directives, KeyValue and the classes they need:
MavenRepo, MavenCoordinate, JitPackUtil, CommandBuffer,
PropertiesValueResolver, ExitException), and Project, AppBuilder and the
new CmdGenerator apply every directive the way JBang does: //FILES,
//REPOS, //MAIN, //MODULE, //MANIFEST, //JAVAAGENT, //COMPILE_OPTIONS,
//RUNTIME_OPTIONS, //PREVIEW, //CDS, //GAV, //DESCRIPTION and source
dependencies given as //DEPS. //JAVA goes back to upstream's syntax, so
full versions are no longer accepted there; JBangLite's own jdk
subcommand still takes them.

The packages follow upstream's layout so that mirrored files sit at their
upstream path. Util, JavaUtil and DependencyUtil keep upstream's API with
a reduced implementation and are listed as shims. misc/sync-upstream.sh
copies the mirrored files from jbangdev/jbang and reports what changed in
the mirror and in the shims, which is what makes upstream fixes to the
directive handling reachable without merging.

The test infrastructure comes with it: JUnit 5 and Hamcrest, and
upstream's TestDirectives runs unchanged.

jbang.jar now requires Java 11 (JBang targets 8) because module-info
generation uses java.lang.module.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_013EjaCeWGqP2G2PeiNPxzES